--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>nopcommercedemo</groupId>
-	<artifactId>nopcommercedemo</artifactId>
+	<groupId>HrmsDemoPOMProject</groupId>
+	<artifactId>HrmsDemoPOMProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>nopcommercedemo</name>
+	<name>HrmsDemoPOMProject</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<extentreports-version>5.0.8</extentreports-version>
 		<aspectj.version>1.9.5</aspectj.version>
 
@@ -43,6 +43,8 @@
 			<artifactId>testng</artifactId>
 			<version>6.14.3</version>
 		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -87,18 +89,16 @@
 			<artifactId>allure-testng</artifactId>
 			<version>2.12.0</version>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.1</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.22</version>
 		</dependency>
-
-
-
+	
 	</dependencies>
 
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -106,8 +106,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 
@@ -144,6 +144,4 @@
 
 		</plugins>
 	</build>
-	
-
 </project>
